# chatclient

./: CMakeLists.txt  README.md  chatclient.ui  dialog.ui  dialoglist.ui  dialoglist.ui.autosave  login.ui  msgbox.ui  register.ui
client/: res.qrc
client/include/: semaphore.h  user.hpp
client/src/: login.cpp  mainwindow.cpp
include/: chatclient.h  dialog.h  dialoglist.h  group.hpp  groupuser.hpp  login.h  msgbox.h  register.h
include/other/: group.hpp  groupuser.hpp  user.hpp
include/protobuf/: base.pb.h  base.proto  others.pb.h  others.proto
lib/: protobuf-lite.pc  protobuf.pc
src/: chatclient.cpp  dialog.cpp  dialoglist.cpp  main.cpp  msgbox.cpp  register.cpp  semaphore.cpp
src/protobuf/: base.pb.cc  others.pb.cc
third/google/protobuf/: unittest.pb.cc  unittest.pb.h
third/google/protobuf/util/internal/testdata/: books.pb.h
